--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -21,3 +21,12 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
+    - name: Setup Java 21
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'adopt' # See 'Supported distributions' for available options
+        java-version: '21'
+
+    - name: Build Eureka Naming Server Docker Image
+      working-directory: ./naming-server
+      run: mvn spring-boot:build-image -DskipTests
