Update docker-compose.yml to use 'latest' tags for services

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -44,7 +44,7 @@ jobs:
       run: mvn clean package
 
     - name: Docker Compose Build
-      working-directory: .
+      working-directory: ./local-test
       run: docker compose build
 
     - name: Tag Docker Images
