--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -49,17 +49,17 @@ jobs:
 
     - name: Tag Docker Images
       run: |
-        docker tag ${{ secrets.DOCKER_USERNAME }}/naming-server:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/naming-server:latest
-        docker tag ${{ secrets.DOCKER_USERNAME }}/naming-server:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/naming-server:${{github.RUN_ID}}
+        docker tag ${{ secrets.DOCKER_USERNAME }}/naming-server:latest ${{ secrets.DOCKER_USERNAME }}/naming-server:latest
+        docker tag ${{ secrets.DOCKER_USERNAME }}/naming-server:latest ${{ secrets.DOCKER_USERNAME }}/naming-server:${{github.RUN_ID}}
         
-        docker tag ${{ secrets.DOCKER_USERNAME }}/api-gateway:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest
-        docker tag ${{ secrets.DOCKER_USERNAME }}/api-gateway:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/api-gateway:${{github.RUN_ID}}
+        docker tag ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest
+        docker tag ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest ${{ secrets.DOCKER_USERNAME }}/api-gateway:${{github.RUN_ID}}
         
-        docker tag ${{ secrets.DOCKER_USERNAME }}/book-service:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/book-service:latest
-        docker tag ${{ secrets.DOCKER_USERNAME }}/book-service:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/book-service:${{github.RUN_ID}}
+        docker tag ${{ secrets.DOCKER_USERNAME }}/book-service:latest ${{ secrets.DOCKER_USERNAME }}/book-service:latest
+        docker tag ${{ secrets.DOCKER_USERNAME }}/book-service:latest ${{ secrets.DOCKER_USERNAME }}/book-service:${{github.RUN_ID}}
         
-        docker tag ${{ secrets.DOCKER_USERNAME }}/exchange-service:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/exchange-service:latest
-        docker tag ${{ secrets.DOCKER_USERNAME }}/exchange-service:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/exchange-service:${{github.RUN_ID}}
+        docker tag ${{ secrets.DOCKER_USERNAME }}/exchange-service:latest ${{ secrets.DOCKER_USERNAME }}/exchange-service:latest
+        docker tag ${{ secrets.DOCKER_USERNAME }}/exchange-service:latest ${{ secrets.DOCKER_USERNAME }}/exchange-service:${{github.RUN_ID}}
         
 
     - name: Push Docker Images to Docker Hub
