--- a/local-test/docker-compose.yml
+++ b/local-test/docker-compose.yml
@@ -71,6 +71,9 @@ services:
   exchange-service:
     image: ayrtonyoshii/exchange-service:latest
     container_name: exchange-service
+    build:
+      context: ../exchange-service
+      dockerfile: ../exchange-service/Dockerfile
     environment:
       TZ: America/Sao_Paulo
       SPRING_ZIPKIN_BASEURL: http://zipkin-server:9411
@@ -96,6 +99,9 @@ services:
   book-service:
     image: ayrtonyoshii/book-service:latest
     container_name: book-service
+    build:
+      context: ../book-service
+      dockerfile: ../book-service/Dockerfile
     environment:
       TZ: America/Sao_Paulo
       SPRING_ZIPKIN_BASEURL: http://zipkin-server:9411
