--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,7 @@ services:
     container_name: exchange-service
     build:
       context: ./exchange-service
-      dockerfile: ./exchange-service/Dockerfile
+      dockerfile: Dockerfile
     environment:
       TZ: America/Sao_Paulo
       SPRING_ZIPKIN_BASEURL: http://zipkin-server:9411
@@ -101,7 +101,7 @@ services:
     container_name: book-service
     build:
       context: ./book-service
-      dockerfile: ./book-service/Dockerfile
+      dockerfile: Dockerfile
     environment:
       TZ: America/Sao_Paulo
       SPRING_ZIPKIN_BASEURL: http://zipkin-server:9411
