--- a/exchange-service/src/main/resources/application.yml
+++ b/exchange-service/src/main/resources/application.yml
@@ -1,9 +1,19 @@
 server:
   port: 8000
-eureka:
-  client:
-    service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://naming-server:8761/eureka}
+management:
+  endpoint:
+    health:
+      probes:
+        enabled: true
+  health:
+    readinessstate:
+      enabled: true
+    livenessstate:
+      enabled: true
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://naming-server:8761/eureka}
 spring:
   application:
     name: exchange-service
