--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,72 +1,72 @@
 # docker run -p 8761:8761 ayrtonyoshii/naming-server:latest
 
 services:
-  zipkin-server:
-    image: openzipkin/zipkin:3.5.1
-    container_name: zipkin-3.5.1
-    ports:
-      - "9411:9411"
-    restart: always
-    networks:
-      - ayrton-network
+#  zipkin-server:
+#    image: openzipkin/zipkin:3.5.1
+#    container_name: zipkin-3.5.1
+#    ports:
+#      - "9411:9411"
+#    restart: always
+#    networks:
+#      - ayrton-network
+#
+#  naming-server:
+#    image: ayrtonyoshii/naming-server:0.0.1-SNAPSHOT
+#    container_name: naming-server
+#    ports:
+#      - "8761:8761"
+#    restart: always
+#    depends_on:
+#      - zipkin-server
+#    environment:
+#      SPRING_ZIPKIN_BASEURL: http://zipkin-server:9411
+#    networks:
+#      - ayrton-network
+#
+#  api-gateway:
+#    image: ayrtonyoshii/api-gateway:0.0.1-SNAPSHOT
+#    container_name: api-gateway
+#    ports:
+#      - "8765:8765"
+#    restart: always
+#    depends_on:
+#      - zipkin-server
+#      - naming-server
+#    environment:
+#      SPRING_ZIPKIN_BASEURL: http://zipkin-server:9411
+#      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://naming-server:8761/eureka/
+#    networks:
+#      - ayrton-network
 
-  naming-server:
-    image: ayrtonyoshii/naming-server:0.0.1-SNAPSHOT
-    container_name: naming-server
-    ports:
-      - "8761:8761"
-    restart: always
-    depends_on:
-      - zipkin-server
-    environment:
-      SPRING_ZIPKIN_BASEURL: http://zipkin-server:9411
-    networks:
-      - ayrton-network
-
-  api-gateway:
-    image: ayrtonyoshii/api-gateway:0.0.1-SNAPSHOT
-    container_name: api-gateway
-    ports:
-      - "8765:8765"
-    restart: always
-    depends_on:
-      - zipkin-server
-      - naming-server
-    environment:
-      SPRING_ZIPKIN_BASEURL: http://zipkin-server:9411
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://naming-server:8761/eureka/
-    networks:
-      - ayrton-network
-
-  book-db:
-    image: mysql:9.4.0
-    container_name: book-db
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: book_service
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: admin123
-      TZ: America/Sao_Paulo
-    ports:
-      - "3320:3306"
-    networks:
-      - ayrton-network
-
-  exchange-db:
-    image: mysql:9.4.0
-    container_name: exchange-db
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: exchange_service
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: admin123
-      TZ: America/Sao_Paulo
-    ports:
-      - "3321:3306"
-    networks:
-      - ayrton-network
+#  book-db:
+#    image: mysql:9.4.0
+#    container_name: book-db
+#    restart: always
+#    environment:
+#      MYSQL_ROOT_PASSWORD: root
+#      MYSQL_DATABASE: book_service
+#      MYSQL_USER: admin
+#      MYSQL_PASSWORD: admin123
+#      TZ: America/Sao_Paulo
+#    ports:
+#      - "3320:3306"
+#    networks:
+#      - ayrton-network
+#
+#  exchange-db:
+#    image: mysql:9.4.0
+#    container_name: exchange-db
+#    restart: always
+#    environment:
+#      MYSQL_ROOT_PASSWORD: root
+#      MYSQL_DATABASE: exchange_service
+#      MYSQL_USER: admin
+#      MYSQL_PASSWORD: admin123
+#      TZ: America/Sao_Paulo
+#    ports:
+#      - "3321:3306"
+#    networks:
+#      - ayrton-network
 
   exchange-service:
     image: ayrtonyoshii/exchange-service:latest
@@ -78,13 +78,10 @@ services:
       TZ: America/Sao_Paulo
       SPRING_ZIPKIN_BASEURL: http://zipkin-server:9411
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://naming-server:8761/eureka/
-      SPRING_DATASOURCE_URL: jdbc:mysql://exchange-db:3306/exchange_service?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&enabledTLSProtocols=TLSv1.2
+#      SPRING_DATASOURCE_URL: jdbc:mysql://exchange-db:3306/exchange_service?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&enabledTLSProtocols=TLSv1.2
+      SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/exchange_service?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&enabledTLSProtocols=TLSv1.2
       SPRING_DATASOURCE_USERNAME: admin
       SPRING_DATASOURCE_PASSWORD: admin123
-    depends_on:
-      - exchange-db
-      - naming-server
-      - zipkin-server
     ports:
       - "8000:8000"
     networks:
@@ -95,6 +92,10 @@ services:
         delay: 10s
         max_attempts: 5
         window: 120s
+#    depends_on:
+#      - exchange-db
+#      - naming-server
+#      - zipkin-server
 
   book-service:
     image: ayrtonyoshii/book-service:latest
@@ -106,13 +107,10 @@ services:
       TZ: America/Sao_Paulo
       SPRING_ZIPKIN_BASEURL: http://zipkin-server:9411
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://naming-server:8761/eureka/
-      SPRING_DATASOURCE_URL: jdbc:mysql://book-db:3306/book_service?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&enabledTLSProtocols=TLSv1.2
+#      SPRING_DATASOURCE_URL: jdbc:mysql://book-db:3306/book_service?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&enabledTLSProtocols=TLSv1.2
+      SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/book_service?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&enabledTLSProtocols=TLSv1.2
       SPRING_DATASOURCE_USERNAME: admin
       SPRING_DATASOURCE_PASSWORD: admin123
-    depends_on:
-      - book-db
-      - naming-server
-      - zipkin-server
     ports:
       - "8100:8100"
     networks:
@@ -123,6 +121,10 @@ services:
         delay: 10s
         max_attempts: 10
         window: 120s
+#    depends_on:
+#      - book-db
+#      - naming-server
+#      - zipkin-server
 
 networks:
   ayrton-network:
