--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -27,13 +27,13 @@ jobs:
         distribution: 'adopt' # See 'Supported distributions' for available options
         java-version: '21'
 
-    - name: Build Eureka Naming Server Docker Image
-      working-directory: ./naming-server
-      run: mvn spring-boot:build-image # Build the Image using <image> tag in pom.xml
-
-    - name: Build API Gateway Docker Image
-      working-directory: ./api-gateway
-      run: mvn spring-boot:build-image
+#    - name: Build Eureka Naming Server Docker Image
+#      working-directory: ./naming-server
+#      run: mvn spring-boot:build-image # Build the Image using <image> tag in pom.xml
+#
+#    - name: Build API Gateway Docker Image
+#      working-directory: ./api-gateway
+#      run: mvn spring-boot:build-image
 
     - name: Build Book Service Docker Image
       working-directory: ./book-service
@@ -49,29 +49,33 @@ jobs:
 
     - name: Tag Docker Images
       run: |
-        docker tag ${{ secrets.DOCKER_USERNAME }}/naming-server:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/naming-server:latest
-        docker tag ${{ secrets.DOCKER_USERNAME }}/naming-server:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/naming-server:${{github.RUN_ID}}
-        
-        docker tag ${{ secrets.DOCKER_USERNAME }}/api-gateway:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest
-        docker tag ${{ secrets.DOCKER_USERNAME }}/api-gateway:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/api-gateway:${{github.RUN_ID}}
+#        docker tag ${{ secrets.DOCKER_USERNAME }}/naming-server:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/naming-server:latest
+#        docker tag ${{ secrets.DOCKER_USERNAME }}/naming-server:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/naming-server:${{github.RUN_ID}}
+#
+#        docker tag ${{ secrets.DOCKER_USERNAME }}/api-gateway:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest
+#        docker tag ${{ secrets.DOCKER_USERNAME }}/api-gateway:0.0.1-SNAPSHOT ${{ secrets.DOCKER_USERNAME }}/api-gateway:${{github.RUN_ID}}
         
         docker tag ${{ secrets.DOCKER_USERNAME }}/book-service:latest ${{ secrets.DOCKER_USERNAME }}/book-service:latest
         docker tag ${{ secrets.DOCKER_USERNAME }}/book-service:latest ${{ secrets.DOCKER_USERNAME }}/book-service:${{github.RUN_ID}}
+        docker tag ${{ secrets.DOCKER_USERNAME }}/book-service:latest ${{ secrets.DOCKER_USERNAME }}/book-service:kube-v1
         
         docker tag ${{ secrets.DOCKER_USERNAME }}/exchange-service:latest ${{ secrets.DOCKER_USERNAME }}/exchange-service:latest
         docker tag ${{ secrets.DOCKER_USERNAME }}/exchange-service:latest ${{ secrets.DOCKER_USERNAME }}/exchange-service:${{github.RUN_ID}}
-        
+        docker tag ${{ secrets.DOCKER_USERNAME }}/exchange-service:latest ${{ secrets.DOCKER_USERNAME }}/exchange-service:kube-v1
+
 
     - name: Push Docker Images to Docker Hub
       run: |
-        docker push ${{ secrets.DOCKER_USERNAME }}/naming-server:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/naming-server:${{github.RUN_ID}}
-        
-        docker push ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/api-gateway:${{github.RUN_ID}}
+#        docker push ${{ secrets.DOCKER_USERNAME }}/naming-server:latest
+#        docker push ${{ secrets.DOCKER_USERNAME }}/naming-server:${{github.RUN_ID}}
+#
+#        docker push ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest
+#        docker push ${{ secrets.DOCKER_USERNAME }}/api-gateway:${{github.RUN_ID}}
         
         docker push ${{ secrets.DOCKER_USERNAME }}/book-service:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/book-service:${{github.RUN_ID}}
+        docker push ${{ secrets.DOCKER_USERNAME }}/book-service:kube-v1
         
         docker push ${{ secrets.DOCKER_USERNAME }}/exchange-service:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/exchange-service:${{github.RUN_ID}}
+        docker push ${{ secrets.DOCKER_USERNAME }}/exchange-service:kube-v1
