--- a/exchange-service/src/main/resources/application.yml
+++ b/exchange-service/src/main/resources/application.yml
@@ -19,9 +19,9 @@ spring:
     name: exchange-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3321/exchange_service
-    username: admin
-    password: admin123
+    url: jdbc:mysql://localhost:3306/exchange_service
+    username: root
+    password: root
   jpa:
     hibernate:
       ddl-auto: none
